# MaTeX

./: Cargo.toml  README.md
src/: compiler.rs  main.rs  utils.rs
test/: packages.matex  sometext.matex  test.aux  test.matex  test.tex
